--- a/src/app/modules/Home/home.component.scss
+++ b/src/app/modules/Home/home.component.scss
@@ -1,25 +1,13 @@
-// @keyframes marquee {
-//     0% {
-//         transform: translateX(0);
-//     }
-
-//     100% {
-//         transform: translateX(-50%);
-//     }
-// }
-
-// .animate-marquee {
-//     animation: marquee 15s linear infinite;
-// }
-
-// .animate-marquee:hover {    
-//     animation-play-state: paused;
-// }
-
 @keyframes marquee {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); }
+  0% {
+    transform: translateX(0);
   }
-  .animate-marquee {
-    animation: marquee 45s linear infinite;
+
+  100% {
+    transform: translateX(-50%);
   }
+}
+
+.animate-marquee {
+  animation: marquee 45s linear infinite;
+}
